<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TimePicker
        android:id="@+id/tp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_job"
        android:timePickerMode="spinner"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Start alarm"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:id="@+id/start_alarm"
        android:layout_below="@+id/tp"
        android:layout_alignRight="@+id/tp"
        android:layout_alignEnd="@+id/tp"
        android:layout_marginEnd="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stop_alarm"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/stop_alarm"
        android:layout_below="@+id/tp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/did_you_set_the_alarm"
        android:id="@+id/update_text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/start_alarm"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/sundayBtn"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="327dp"
        android:layout_marginLeft="327dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/su" />

    <Button
        android:id="@+id/tuesdayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/t" />

    <Button
        android:id="@+id/wednesdayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/w" />

    <Button
        android:id="@+id/thursdayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/th" />

    <Button
        android:id="@+id/fridayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="227dp"
        android:layout_marginLeft="227dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/f" />

    <Button
        android:id="@+id/saturdayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginLeft="277dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/sa" />

    <Button
        android:id="@+id/mondayBtn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="270dp"
        android:text="@string/m" />

</RelativeLayout>

